--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.3",
     "isomorphic-unfetch": "^2.0.0",
     "next": "^5.1.0",
+    "next-routes": "^1.4.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-md": "^1.3.4",
